# alsa-midi-latency-test

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  autogen.sh  configure  configure.ac  configure.in
.github/: FUNDING.yml
.github/workflows/: debian-latest.yml  release.yml  ubuntu.yml
benchmarks/: elektron-tm1.txt  gm5x5x5.txt  m-audio-2496.txt  midisport2x2ann.txt  mpu401.txt  ua25ex.txt  um2ex.txt  yamaha-ux256.txt
debian/: changelog  control  copyright  manpages  rules
include/: Makefile.am  Makefile.in  aconfig.h.in
m4/: Makefile  Makefile.in
src/: Makefile.am  Makefile.in  alsa-midi-latency-test.1  alsa-midi-latency-test.c
